# dismech-v2

./: CMakeLists.txt  README.md  gps-line.el
src/: README.md  frame_util.cpp  frame_util.h
src/elastics/: bend_energy.cpp  bend_energy.h  elastic_energy.cpp  elastic_energy.h  stretch_energy.cpp  stretch_energy.h  test_bend.cpp  test_stretch.cpp
src/mechanics/: environment.cpp  environment.h  geometry  geometry.cpp  geometry.h  params.cpp  params.h  robotState.cpp  robotState.h  softRobot.cpp  softRobot.h  softrobot  stiffness  stiffness.cpp  stiffness.h  test_softRobot.cpp
src/mechanics/geometry.dSYM/Contents/Resources/DWARF/: geometry
src/mechanics/geometry.dSYM/Contents/Resources/Relocations/aarch64/: geometry.yml
src/mechanics/stiffness.dSYM/Contents/: Info.plist
src/mechanics/stiffness.dSYM/Contents/Resources/DWARF/: stiffness
src/mechanics/stiffness.dSYM/Contents/Resources/Relocations/aarch64/: stiffness.yml
src/springs/: bend_twist_spring.h  hinge_spring.h  stretch_spring.h  triangle_spring.h
